# serializer version: 1
# name: test_services[default]
  list([
    'refresh_system',
    'reset_system',
    'set_system_mode',
    'clear_zone_override',
    'set_zone_override',
  ])
# ---
# name: test_services[h032585]
  list([
    'refresh_system',
    'set_system_mode',
    'clear_zone_override',
    'set_zone_override',
  ])
# ---
# name: test_services[h099625]
  list([
    'refresh_system',
    'set_system_mode',
    'clear_zone_override',
    'set_zone_override',
  ])
# ---
# name: test_services[minimal]
  list([
    'refresh_system',
    'reset_system',
    'set_system_mode',
    'clear_zone_override',
    'set_zone_override',
  ])
# ---
# name: test_services[sys_004]
  list([
    'refresh_system',
    'set_system_mode',
    'clear_zone_override',
    'set_zone_override',
  ])
# ---
# name: test_services[system_004]
  list([
    'refresh_system',
    'set_system_mode',
    'clear_zone_override',
    'set_zone_override',
  ])
# ---
